switch to using AWS SDK for C++

--- a/api/layers/OpenSlide/Makefile
+++ b/api/layers/OpenSlide/Makefile
@@ -1,74 +1,51 @@
 build-OpenSlide:
-	yum install -y libjpeg-turbo-devel openjpeg2-devel libtiff-devel cairo-devel gdk-pixbuf2-devel sqlite-devel libxml2-devel libcurl-devel
+	# get Openslide deps
+	dnf install -y glib2-devel libjpeg-turbo-devel openjpeg2-devel libtiff-devel libcurl-devel-8.3.0-1.amzn2023.0.2
 	mkdir -p "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libcairo.so.2 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libxml2.so.2 "$(ARTIFACTS_DIR)/lib"
 	cp /usr/lib64/libopenjp2.so.7 "$(ARTIFACTS_DIR)/lib"
 	cp /usr/lib64/libtiff.so.5 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libpng15.so.15 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libgdk_pixbuf-2.0.so.0 "$(ARTIFACTS_DIR)/lib"
+	cp /usr/lib64/libwebp.so.7 "$(ARTIFACTS_DIR)/lib"
+	cp /usr/lib64/libpng16.so.16 "$(ARTIFACTS_DIR)/lib"
 	cp /usr/lib64/libjpeg.so.62 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libEGL.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libfontconfig.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libfreetype.so.6 "$(ARTIFACTS_DIR)/lib"
 	cp /usr/lib64/libglib-2.0.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libgmodule-2.0.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libgobject-2.0.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libgthread-2.0.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libgio-2.0.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libmount.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libpixman-1.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libxcb-shm.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libxcb.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libxcb-render.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libXrender.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libX11.so.6 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libXext.so.6 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libGL.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/liblzma.so.5 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libjbig.so.2.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libblkid.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libuuid.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libexpat.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libbz2.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libGLdispatch.so.0  "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libXau.so.6 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libGLX.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libcurl.so.4 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libnghttp2.so.14 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libidn2.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libssh2.so.1 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libldap-2.4.so.2 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/liblber-2.4.so.2 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libunistring.so.0 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libsasl2.so.3 "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libssl3.so "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libsmime3.so "$(ARTIFACTS_DIR)/lib"
-	cp /usr/lib64/libnss3.so "$(ARTIFACTS_DIR)/lib"
+	cp /usr/lib64/libjbig.so.2.1 "$(ARTIFACTS_DIR)/lib"
 
-	yum install -y cmake3
-	git clone https://github.com/json-c/json-c.git
-	mkdir json-c-build
-	cd json-c-build \
-	&& cmake3 -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE="release" ../json-c \
-	&& make \
-	&& make install
-	cp /usr/lib64/libjson-c.so.5 "$(ARTIFACTS_DIR)/lib"
+	dnf install -y meson ninja-build cmake
+	# Build cairo graphics as a link-time optimized static library
+	curl https://cairographics.org/releases/cairo-1.18.0.tar.xz -o cairo.tar.xz
+	mkdir -p cairo/build && tar xf cairo.tar.xz -C cairo --strip-components=1
+	meson setup cairo/build cairo --buildtype=release --default-library=static \
+		--auto-features=disabled -Db_lto=true -Dc_args="-Wno-inline -w"
+	# These next two text replacements are to help LTO eliminate unneeded code
+	sed -i.bak 's/__attribute__((__visibility__("default")))/__attribute__((__visibility__("hidden")))/' cairo/src/cairo.h
+	sed -i.bak 's/__attribute__ ((visibility("default")))/__attribute__((visibility("hidden")))/' cairo/subprojects/pixman/pixman/pixman-compiler.h
+	ninja -C cairo/build
+	ninja -C cairo/build install
 
-	curl -o gdal.zip -L https://github.com/VanAndelInstitute/gdal-vsi/archive/master.zip
-	unzip gdal.zip
-	cd gdal-vsi-master/gdal \
-	&& ./configure --with-proj=no --disable-all-optional-drivers --prefix=/usr --libdir=/usr/lib64 \
-	&& make -j8 \
-	&& make install
-	cp /usr/lib64/libgdal.so.29 "$(ARTIFACTS_DIR)/lib"
+	# Build AWS SDK for C++ ourselves, until someone makes it smaller. Might as well link it
+	# statically if we're building it anyway (link-time optimized and fewer symbol relocations).
+	git clone --recurse-submodules --depth=1 --branch 1.11.314 https://github.com/aws/aws-sdk-cpp
+	cd aws-sdk-cpp && git apply ../aws-sdk-cpp.patch
+	dnf install -y openssl-devel
+	cmake -S aws-sdk-cpp -B aws-sdk-cpp/build -DCMAKE_BUILD_TYPE=Release -DENABLE_TESTING=OFF  \
+		-DBUILD_ONLY="s3" -DBUILD_SHARED_LIBS=OFF -DENABLE_UNITY_BUILD=OFF -DENABLE_VIRTUAL_OPERATIONS=OFF \
+		-DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON -DAWS_ENABLE_LTO=ON -DS2N_LTO=ON \
+		-DCMAKE_C_FLAGS="-fvisibility=hidden" -DCMAKE_CXX_FLAGS="-fvisibility=hidden -fvisibility-inlines-hidden"
+	cmake --build aws-sdk-cpp/build --config=Release
+	cmake --install aws-sdk-cpp/build --config=Release
 
-	git clone https://github.com/VanAndelInstitute/openslide.git
-	cd openslide \
-	&& autoreconf -i \
-	&& ./configure --prefix=/usr --libdir=/usr/lib64 \
-	&& make \
-	&& make install
-	cp /usr/lib64/libopenslide.so.0 "$(ARTIFACTS_DIR)/lib"
+	# Build TIFFClientOpen-to-S3 adapter as a link-time optimized static library
+	cmake -S tiffS3 -B tiffS3/build -DCMAKE_BUILD_TYPE=Release -DENABLE_TESTING=OFF  \
+		-DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
+	cmake --build tiffS3/build --config=Release
+	cmake --install tiffS3/build --config=Release
+
+	# Build Openslide as a link-time optimized shared library
+	git clone --depth=1 https://github.com/rmontroy/openslide.git
+	meson setup openslide/build openslide --buildtype=release --auto-features=disabled \
+		-Db_lto=true
+	ninja -C openslide/build
+	ninja -C openslide/build install
+	cp /usr/local/lib64/libopenslide.so.1 "$(ARTIFACTS_DIR)/lib"
 
 	pip install openslide-python --no-deps -t "$(ARTIFACTS_DIR)/python"
