--- a/api/layers/Pillow-SIMD/Makefile
+++ b/api/layers/Pillow-SIMD/Makefile
@@ -1,5 +1,5 @@
 build-PillowSIMD:
-	yum install -y python3-devel zlib libjpeg-turbo-devel lcms2-devel
+	dnf install -y python3-devel zlib libjpeg-turbo-devel lcms2-devel
 	mkdir -p "$(ARTIFACTS_DIR)/lib"
 	cp /usr/lib64/liblcms2.so.2 "$(ARTIFACTS_DIR)/lib"
 	mkdir -p "$(ARTIFACTS_DIR)/python"
